[tool.poetry]
name = "poetry_fails_grpcio"
version = "0.1.0"
description = ""
authors = ["Ben Butterworth <24711048+ben-xD@users.noreply.github.com >"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.43.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "NVIDIA"
url = "https://pypi.ngc.nvidia.com"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
